tests/test2/fail/fail-logical.m2
int main(){
	matrix float [1][1] a;
	matrix float [1][1] b;
	a = [[1.1]];
	b = [[2.2]];
	if (a && b){
		printStr(1);
	}
	return 0;
}